--- a/my-first-app/src/app/server/server.component.html
+++ b/my-first-app/src/app/server/server.component.html
@@ -1,2 +1,3 @@
-<p>server component</p>
+<!-- Here we use String Interpolation to set text dynamically -->
+<p>Server with ID {{ serverId }} is {{ getServerStatus() }}</p>
 <app-servers></app-servers>
