The assignment set up

--- a/my-first-app/src/app/servers/servers.component.html
+++ b/my-first-app/src/app/servers/servers.component.html
@@ -26,5 +26,5 @@
 <!-- This is String Interpolation -->
 <p [innerText]="allowNewServer"></p>
 
-This is 
+<!-- This is another element that changed the DOM, this is a for loop -->
 <app-server *ngFor="let server of servers"></app-server>
