--- a/my-first-app/src/app/servers/servers.component.html
+++ b/my-first-app/src/app/servers/servers.component.html
@@ -28,3 +28,18 @@
 
 <!-- This is another element that changed the DOM, this is a for loop -->
 <app-server *ngFor="let server of servers"></app-server>
+
+<!-- An example of how to get the index within ngFor -->
+<button class="btn btn-primary" (click)="onToggleDetails()">
+  Display details
+</button>
+<p *ngIf="showSecret">Secret Password = tuna</p>
+<div
+  *ngFor="let logItem of log; let i = index"
+  [ngStyle]="{
+    background: i >= 4 ? 'blue' : 'transparent',
+    color: i >= 4 ? 'white' : 'black'
+  }"
+>
+  {{ logItem }}
+</div>
