--- a/cmp-databinding-assignment-start/src/app/game-control/game-control.component.html
+++ b/cmp-databinding-assignment-start/src/app/game-control/game-control.component.html
@@ -1,1 +1,6 @@
-<p>game-control works!</p>
+<hr />
+<div class="container">
+  <button class="btn btn-success" (click)="startGame()">Start!</button>
+  <button class="btn btn-danger" (click)="pauzeGame()">Pauze!</button>
+  <hr />
+</div>
