--- a/RecipeIngredientsApp/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/RecipeIngredientsApp/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -20,7 +20,7 @@
         Manage Recipe <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a href="#">Add Ingredients</a></li>
+        <li><a (click)="onAddToShoppingList()" style="cursor: pointer;" >Add Ingredients</a></li>
         <li><a href="#">Edit Recipe</a></li>
         <li><a href="#">Delete Recipe</a></li>
       </ul>
@@ -29,11 +29,17 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
+    <hr>
     {{ recipe.description }}
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
-    {{ ingredients }}
+    <ul class="list-group">
+      <hr />
+      <li class="list-group" *ngFor="let ingredient of recipe.ingredients">
+        {{ ingredient.name }} - {{ ingredient.amount }}
+      </li>
+    </ul>
   </div>
 </div>
