--- a/routing-start/src/app/home/home.component.html
+++ b/routing-start/src/app/home/home.component.html
@@ -1,4 +1,8 @@
 <h4>Welcome to Server Manager 4.0</h4>
 <p>Manage your Servers and Users.</p>
 
-
+<!-- Change path without reloading via button (programatically) -->
+<button class="btn btn-primary" (click)="onLoadServers(1)">Load Servers</button>
+<hr />
+<button class="btn btn-default" (click)="onLogin()">Login</button>
+<button class="btn btn-default" (click)="onLogout()">Logout</button>
