--- a/RecipeIngredientsApp/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/RecipeIngredientsApp/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -20,16 +20,20 @@
         Manage Recipe <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a (click)="onAddToShoppingList()" style="cursor: pointer;" >Add Ingredients</a></li>
-        <li><a href="#">Edit Recipe</a></li>
-        <li><a href="#">Delete Recipe</a></li>
+        <li>
+          <a (click)="onAddToShoppingList()" style="cursor: pointer;"
+            >Add Ingredients</a
+          >
+        </li>
+        <li><a routerLink="edit" style="cursor: pointer;">Edit Recipe</a></li>
+        <li><a style="cursor: pointer;">Delete Recipe</a></li>
       </ul>
     </div>
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <hr>
+    <hr />
     {{ recipe.description }}
   </div>
 </div>
