--- a/forms-td-start/src/app/app.component.html
+++ b/forms-td-start/src/app/app.component.html
@@ -1,27 +1,93 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-      <form>
-        <div id="user-data">
+      <form (ngSubmit)="onSubmit(form)" #form="ngForm">
+        <div id="user-data" ngModelGroup="userData" #userData="ngModelGroup">
           <div class="form-group">
             <label for="username">Username</label>
-            <input type="text" id="username" class="form-control">
+            <input
+              type="text"
+              id="username"
+              class="form-control"
+              ngModel
+              name="username"
+              required
+            />
           </div>
-          <button class="btn btn-default" type="button">Suggest an Username</button>
+          <button
+            class="btn btn-default"
+            type="button"
+            (click)="suggestUserName()"
+          >
+            Suggest an Username
+          </button>
           <div class="form-group">
             <label for="email">Mail</label>
-            <input type="email" id="email" class="form-control">
+            <input
+              type="email"
+              id="email"
+              class="form-control"
+              ngModel
+              name="email"
+              required
+              email
+              #email="ngModel"
+            />
+            <span class="help-block" *ngIf="!email.valid && email.touched">
+              Please enter a valid value!
+            </span>
           </div>
         </div>
+        <p *ngIf="!userData.valid && userData.touched">User Data is invalid!</p>
         <div class="form-group">
           <label for="secret">Secret Questions</label>
-          <select id="secret" class="form-control">
+          <select
+            id="secret"
+            class="form-control"
+            [ngModel]="secretQuestion"
+            name="secretQuestion"
+          >
             <option value="pet">Your first Pet?</option>
             <option value="teacher">Your first teacher?</option>
           </select>
         </div>
-        <button class="btn btn-primary" type="submit">Submit</button>
+        <div class="form-group">
+          <textarea
+            name="questionAnswer"
+            rows="3"
+            class="form-control"
+            [(ngModel)]="answer"
+            required
+            #questionAnswer="ngModel"
+          ></textarea>
+        </div>
+        <p *ngIf="!answer == ''">Your reply: {{ answer }}</p>
+        <p *ngIf="answer == '' && questionAnswer.touched">
+          Please enter the name of your {{ secretQuestion }}!
+        </p>
+
+        <div class="radio" *ngFor="let gender of genders">
+          <label>
+            <input type="radio" name="gender" ngModel [value]="gender" />
+            {{ gender }}
+          </label>
+        </div>
+
+        <button class="btn btn-primary" type="submit" [disabled]="!form.valid">
+          Submit
+        </button>
       </form>
+      <hr />
+      <div *ngIf="submitted" class="row">
+        <div class="col-xs-12">
+          <h3>Your data</h3>
+          <p>Username: {{ user.username }}</p>
+          <p>Mail: {{ user.email }}</p>
+          <p>Secret Question: {{ user.secretQuestion }}</p>
+          <p>Answer: {{ user.answer }}</p>
+          <p>Gender: {{ user.gender }}</p>
+        </div>
+      </div>
     </div>
   </div>
 </div>
