--- a/Assignments/forms-td-assignment-start/src/app/app.component.html
+++ b/Assignments/forms-td-assignment-start/src/app/app.component.html
@@ -1,16 +1,77 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
+      <form (ngSubmit)="onSubmit()" #form="ngForm">
+        <h3>Assignment form!</h3>
+        <div class="form-group">
+          <label for="email">Emailadres</label>
+          <input
+            type="email"
+            name="email"
+            id="email"
+            class="form-control"
+            ngModel
+            required
+            email
+            #email="ngModel"
+          />
+          <span class="help-block" *ngIf="!email.valid && email.touched">
+            Email is invalid!
+          </span>
+        </div>
+        <div class="form-group">
+          <label for="subscription">Subscription</label>
+          <select
+            name="subscription"
+            class="form-control"
+            id="subscription"
+            [ngModel]="subscription"
+          >
+            <option value="basic">Basic</option>
+            <option value="advanced">Advanced</option>
+            <option value="pro">Pro</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input
+            type="password"
+            id="password"
+            class="form-control"
+            name="password"
+            ngModel
+            #password="ngModel"
+            required
+          />
+          <span class="help-block" *ngIf="!password.valid && password.touched">
+            Password is required!
+          </span>
+        </div>
+        <p *ngIf="!form.valid">The form is invalid!</p>
+        <button class="btn btn-primary" type="submit" [disabled]="!form.valid">
+          Submit
+        </button>
+      </form>
+
+      <div class="row" *ngIf="submitted">
+        <div class="col-xs-12">
+          <h3>Your info!</h3>
+          <p>Email: {{ user.email }}</p>
+          <p>Subscription: {{ user.subscription }}</p>
+          <p>Password: {{ user.password }}</p>
+        </div>
+      </div>
+
       <!-- Add a Form with the following Inputs (and Validators)
-           1) Mail address (should not be empty and should be an email address)
-           2) A Dropdown which allows the user to select from three different Subscriptions ("Basic", "Advanced", "Pro")
+           - 1) Mail address (should not be empty and should be an email address)
+           - 2) A Dropdown which allows the user to select from three different Subscriptions ("Basic", "Advanced", "Pro")
               Set "Advanced" as Default
-           3) A Password field (should not be empty)
-           4) A Submit Button
+           - 3) A Password field (should not be empty)
+           - 4) A Submit Button
 
-           Display a warning message if the Form is invalid AND was touched. Display a warning message below each input if it's invalid.
+           - Display a warning message if the Form is invalid AND was touched. Display a warning message below each input if it's invalid.
 
-           Upon submitting the form, you should simply print the Value of the Form to the Console.
+           - Upon submitting the form, you should simply print the Value of the Form to the Console.
            Optionally, display it in your template.
       -->
     </div>
