--- a/forms-reactive-start/src/app/app.component.html
+++ b/forms-reactive-start/src/app/app.component.html
@@ -1,28 +1,78 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-      <form>
-        <div class="form-group">
-          <label for="username">Username</label>
-          <input
-            type="text"
-            id="username"
-            class="form-control">
+      <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
+        <div class="form-group" formGroupName="userData">
+          <div class="form-group">
+            <label for="username">Username</label>
+            <input
+              type="text"
+              id="username"
+              formControlName="username"
+              class="form-control"
+            />
+            <span
+              class="help-block"
+              *ngIf="
+                !signupForm.get('userData.username').valid &&
+                signupForm.get('userData.username').touched
+              "
+            >
+              <span
+                *ngIf="
+                  signupForm.get('userData.username').errors['nameIsForbidden']
+                "
+              >
+                Please enter another username! This one is forbidden.
+              </span>
+              <span
+                *ngIf="signupForm.get('userData.username').errors['required']"
+              >
+                Please enter an username!
+              </span>
+            </span>
+          </div>
+          <div class="form-group">
+            <label for="email">email</label>
+            <input
+              type="text"
+              id="email"
+              formControlName="email"
+              class="form-control"
+            />
+            <span
+              class="help-block"
+              *ngIf="
+                !signupForm.get('userData.email').valid &&
+                signupForm.get('userData.email').touched
+              "
+            >
+              Please enter a valid email!
+            </span>
+          </div>
         </div>
-        <div class="form-group">
-          <label for="email">email</label>
-          <input
-            type="text"
-            id="email"
-            class="form-control">
-        </div>
+
         <div class="radio" *ngFor="let gender of genders">
           <label>
-            <input
-              type="radio"
-              [value]="gender">{{ gender }}
+            <input type="radio" formControlName="gender" [value]="gender" />{{
+              gender
+            }}
           </label>
         </div>
+
+        <div formArrayName="hobbies">
+          <h4>Your hobbies</h4>
+          <button class="btn btn-default" type="button" (click)="onAddHobby()">
+            Add Hobby
+          </button>
+          <div
+            *ngFor="let hobbyControl of controls; let i = index"
+            class="form-group"
+          >
+            <input type="text" class="form-control" [formControlName]="i" />
+          </div>
+        </div>
+
         <button class="btn btn-primary" type="submit">Submit</button>
       </form>
     </div>
